--- a/README
+++ b/README
@@ -5,8 +5,8 @@ buildscript {
         mavenCentral()
         add(new org.apache.ivy.plugins.resolver.URLResolver()) {
             name = 'cobertura'
-            addArtifactPattern 'https://github.com/valkolovos/gradle_cobertura/raw/master/ivy/[module]/[revision]/[module].[ext]'
-            addIvyPattern 'https://github.com/valkolovos/gradle_cobertura/raw/master/ivy/[module]/[revision]/ivy.xml'
+            addArtifactPattern 'https://github.com/valkolovos/gradle_cobertura/raw/master/ivy/[organization]/[module]/[revision]/[module].[ext]'
+            addIvyPattern 'https://github.com/valkolovos/gradle_cobertura/raw/master/ivy/[organization]/[module]/[revision]/ivy.xml'
         }
     }
     dependencies {
@@ -29,8 +29,8 @@ buildscript {
     repositories {
         add(new org.apache.ivy.plugins.resolver.FileSystemResolver()) {
             name = 'local_cobertura' // or whatever you want to put here
-            addArtifactPattern '${ cobertura project directory }/ivy/[module]/[revision]/[module].[ext]' // replace 'cobertura project directory' with real directory
-            addIvyPattern '${ cobertura project directory }/ivy/[module]/[revision]/ivy.xml'
+            addArtifactPattern '${ cobertura project directory }/ivy/[organization]/[module]/[revision]/[module].[ext]' // replace 'cobertura project directory' with real directory
+            addIvyPattern '${ cobertura project directory }/ivy/[organization]/[module]/[revision]/ivy.xml'
         }
     }
     dependencies {
