--- a/CHANGELOG
+++ b/CHANGELOG
@@ -21,9 +21,10 @@ Changes for 2.2.0
 - If the coberturaReport is in the task graph, the up-to-date status of all
   tests is set to false (issue #33)
 
-- Check task implemented. (issue #29)  It definitely has some quirks.  If the
-failure property is set, and tests fail, the build will fail, but the check
-task will set the failure message, possibly hiding the fact that tests failed.
+- A Cobertura Check task has been implemented (issue #29) to check test coverage
+  levels.
+
+- I've added more tests, and hope to add even more soon.
 
 Changes for 2.1.0
 =================
