--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Changes for 2.2.3
+=================
+- Added support for the Gradle dashboard, with thanks to vyazelenko (Issues #45
+  and #46)
+
 Changes for 2.2.2
 =================
 - Fixed the Auxiliary classpath on Windows boxes. (Issue #39)
