--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Changes for 2.2.4
+=================
+- Added support for customizing the auxiliary classpath, with thanks to Harald
+  Schmitt (Issue #48)
+
 Changes for 2.2.3
 =================
 - Added support for the Gradle dashboard, with thanks to vyazelenko (Issues #45
